Estilização Do Projeto Pronta

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     --primary: #F2CD5E;
     --primary-ligth: #F4D881;
     --black: #01251E;
+    --green: #89D995;
+    --green-shadow: #025949;
     --white: #EDFFFC;
 }
 
@@ -17,6 +19,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--black);
+    
 }
 
 h1,p,a,button{
@@ -35,17 +38,208 @@ button{
 
 }
 
+.container header{
+    width: 100%;
+    max-width: 1000px;
+    margin:  0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    padding: 1rem;
+
+}
+
+.container header .logo{
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+.container header nav{
+    max-width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
+}
+
+.container header nav a{
+    position: relative;
+    font-weight: 600;
+    letter-spacing: .2px;
+}
 
 
+.container header nav a::after{
+  content: "";
+  position: absolute;
+  width: 0%;
+  background-color: white;
+  height: 3px;
+  inset: 0;
+  top: 103%;
+ 
+  transition: all .3s ease-in-out;
+}
 
 
+.container header nav a:hover::after{
+ width: 100%;
+}
+
+.container main{
+    width: 100%;
+    max-width: 1000px;
+    min-height: 100dvh;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    position: relative;
+}
+
+.container main .box-content{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .8rem;
+    position: relative;
+
+}
 
 
+.container main .box-content .cont-promisse{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    gap: 4rem;
+}
 
-.carrossel img{
-    width: 100px;
-    height: 100px;
+.container main .box-content .box-promisse{
+  width: 100%;
+  max-width: 460px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+}
+
+ .container main .box-content .box-promisse h1{
+    letter-spacing: 1px;
+    font-size: 40px;
+    width: 100%;
+    text-align: left;
+ }
+
+ .container main .box-content .box-promisse button{
+    width: 100%;
+    margin-top: 2rem;
+    height: 40px;
+    text-align: center;
+    font-size: 1.2rem;
+    background-color: var(--primary);
+    cursor: pointer;
+    transition: .3s ease-in-out;
+ }
+
+ .container main .box-content .box-promisse button:hover{
+    background-color: var(--primary-ligth);
+ }
+
+ .container main .box-content .cont-promisse .cont-carrossel{
+   width: 100%;
+   height: 100%;
+
+ }
+
+ .container main .box-content .cont-promisse .box-carrossel{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 1rem;
+ }
+
+ .container main .box-content .cont-promisse .arrow{
+    width: 40px;
+    height: 40px;
+    padding: 4px;
+    border-radius: 50%;
+    background-color: var(--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-size: 1.2rem;
+    font-weight: 900;
+    transition: all .5s ease-in-out;
+ }
+
+ .container main .box-content .cont-promisse .arrow:hover{
+    background-color: var(--primary-ligth);
+ }
+
+.container main .box-content .cont-promisse .carrossel{
+    max-width: 200px;
+    height: 100%;
+    display: flex;
+    overflow: hidden;
+    gap: 10px;
+}
+
+
+.container main .box-content .cont-promisse .carrossel img{
+  min-width: 60%;
+  height: 100px;
+  object-fit: cover;
+  object-position: center;
+  transform: scale(1);
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+}
+
+.container main .box-content .cont-promisse .carrossel img:hover{
+    transform: scale(1.2);
+    
+  }
+
+
+ .box-content .box-img{
+    width: 700px;
+    right: -10%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: -1;
+ }
+
+ .box-content .box-img img{
+    width: 100%;
+    filter: drop-shadow(0px 0px 40px var(--green-shadow)) drop-shadow(0px 0px 90px var(--green));
     object-fit: cover;
     object-position: center;
-}
+
+ }
+
+ 
+
+
+
+
+
 
