--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ button{
  }
 
  .container main .box-content .box-promisse button{
-    width: 100%;
+    width: 80%;
     margin-top: 2rem;
     height: 40px;
     text-align: center;
@@ -192,12 +192,17 @@ button{
     background-color: var(--primary-ligth);
  }
 
-.container main .box-content .cont-promisse .carrossel{
+ .container-carrossel{
     max-width: 200px;
     height: 100%;
-    display: flex;
     overflow: hidden;
+ }
+
+.container main .box-content .cont-promisse .carrossel{
+    max-width: 200px;
+    display: flex;
     gap: 10px;
+    transition: .5s ease-in-out;
 }
 
 
@@ -210,6 +215,11 @@ button{
   cursor: pointer;
   transition: all .3s ease-in-out;
 }
+
+.container main .box-content .cont-promisse .carrossel img:last-child{
+    min-width: 100%;
+  }
+  
 
 .container main .box-content .cont-promisse .carrossel img:hover{
     transform: scale(1.2);
@@ -234,6 +244,20 @@ button{
     object-fit: cover;
     object-position: center;
 
+ }
+
+ @media (width <=800px){
+    .box-content .box-img{
+      display: none;
+     }
+ }
+
+ @media (width <=450px){
+    .container header nav{
+        flex-direction: column;
+        margin-top: 4.8rem;
+    
+    }
  }
 
  
